added bid ask price to feed cols and llm promt

--- a/upstox_v2_9sep_.ipynb
+++ b/upstox_v2_9sep_.ipynb
@@ -2403,12 +2403,23 @@
     "    rows = snapshot_df.tail(max_rows).to_dict(orient='records')\n",
     "    lines = []\n",
     "    for r in rows:\n",
-    "        lines.append(\n",
+    "        # base info\n",
+    "        line = (\n",
     "            f\"Token:{r.get('Token')} sym:{r.get('trading_symbol')} type:{r.get('instrument_type')} \"\n",
     "            f\"strike:{r.get('strike_price')} LTP:{r.get('Ltp')} IV:{r.get('iv')} OI:{r.get('Oi')} \"\n",
     "            f\"Δ={r.get('delta')} Γ={r.get('gamma')} Θ={r.get('theta')} Vega={r.get('vega')} \"\n",
-    "            f\"lot:{r.get('lot_size')} tick:{r.get('tick_size')}\"\n",
+    "            f\"lot:{r.get('lot_size')} tick:{r.get('tick_size')} \"\n",
+    "            f\"Ltt:{r.get('Ltt')} Ltq:{r.get('Ltq')} Cp:{r.get('Cp')} \"\n",
+    "            f\"Atp:{r.get('Atp')} Tbq:{r.get('Tbq')} Tsq:{r.get('Tsq')}\"\n",
     "        )\n",
+    "        # add bid/ask depth if present\n",
+    "        for i in range(1, 6):  # include top 5 levels to keep prompt concise\n",
+    "            line += (\n",
+    "                f\" | L{i}: Bid {r.get(f'BidP{i}')}/{r.get(f'BidQ{i}')} \"\n",
+    "                f\"Ask {r.get(f'AskP{i}')}/{r.get(f'AskQ{i}')}\"\n",
+    "            )\n",
+    "        lines.append(line)\n",
+    "\n",
     "    feed_text = \"\\n\".join(lines)\n",
     "    \n",
     "    prompt = f\"\"\"You are an expert Nifty 50 options strategist.\n",
