--- a/upstox_buy_main.ipynb
+++ b/upstox_buy_main.ipynb
@@ -510,9 +510,12 @@
     "            self.health[key] = self._validate_tick(state)\n",
     "            health_state = self.health.get(key, \"unknown\")\n",
     "            iv_z = self.iv_zscore(key)\n",
+    "            trading_symbol = self.chain_df.loc[self.chain_df[\"instrument_key\"] == key, \"trading_symbol\"]\n",
+    "            symbol_val = trading_symbol.iloc[0] if not trading_symbol.empty else None\n",
     "            if key != self.index_key:\n",
     "                self.metrics.update_market(\n",
     "                    instrument=key,\n",
+    "                    trading_symbol=symbol_val,\n",
     "                    ltp=ltp if np.isfinite(ltp) else None,\n",
     "                    iv=state.iv if isinstance(state.iv, float) else None,\n",
     "                    iv_z=iv_z if np.isfinite(iv_z) else None,\n",
